objects/cscfga__Product_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>csordtelcoa__Replaced_Product_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replaced Product Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Product Configurations (Replaced Product Configuration)</relationshipLabel>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Replaced_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replaced Service</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Product Configurations</relationshipLabel>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Replaced_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replaced Subscription</label>
        <referenceTo>csord__Subscription__c</referenceTo>
        <relationshipLabel>Product Configurations</relationshipLabel>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to a Solution encompassing the Product Configuration object</description>
        <inlineHelpText>Lookup to a Solution encompassing the Product Configuration object</inlineHelpText>
        <label>Solution</label>
        <referenceTo>csord__Solution__c</referenceTo>
        <relationshipLabel>Product Configurations</relationshipLabel>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cspl__Month_Term__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Month Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cspl__Type__c</fullName>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Product Configuration</label>
    <listViews>
        <fullName>cscfga__All</fullName>
        <columns>NAME</columns>
        <columns>cscfga__Product_Definition__c</columns>
        <columns>UPC_Basket_Change_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>cscfga__Entry_Date__c</columns>
        <columns>cscfga__Product_Bundle__c</columns>
        <columns>cscfga__Total_Price__c</columns>
        <columns>cscfga__Unit_Price__c</columns>
        <columns>cscfga__Quantity__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>cscfga__Product_Definition__c</field>
            <operation>equals</operation>
            <value>Business Internet Fiber Power 2.0</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>csexpimp1__Guid_Format_Check</fullName>
        <active>true</active>
        <description>Validates the format of GUID, but allows for it to remain blank.</description>
        <errorConditionFormula>AND(NOT( REGEX( csexpimp1__guid__c , &quot;\\w{8}-\\w{4}-\\w{4}-\\w{4}-\\w{12}&quot;) )
, NOT(ISBLANK(csexpimp1__guid__c )))</errorConditionFormula>
        <errorDisplayField>csexpimp1__guid__c</errorDisplayField>
        <errorMessage>Required format of the GUID is xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
With x being any alphanumeric character (letter or digit).</errorMessage>
    </validationRules>
</CustomObject>